--- a/src/wasm-lib/justfile
+++ b/src/wasm-lib/justfile
@@ -31,3 +31,5 @@ new-sim-test test_name render_to_png="true":
     {{cita}} -p kcl-lib -- simulation_tests::{{test_name}}::unparse
     TWENTY_TWENTY=overwrite {{cita}} -p kcl-lib -- tests::{{test_name}}::kcl_test_execute
 
+test:
+    export RUST_BRACKTRACE="full" && cargo nextest run --workspace --test-threads=1
