--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  CUT_RELEASE_PR: ${{ github.event_name == 'pull_request' && (contains(github.event.pull_request.title, 'Cut release v')) }}
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -34,6 +37,7 @@ jobs:
               - 'src/wasm-lib/**'
 
   browser:
+    if: ${{ env.CUT_RELEASE_PR == 'false' }}
     timeout-minutes: ${{ matrix.os == 'macos-14' && 60 || 50 }}
     name: playwright:browser:${{ matrix.os }} ${{ matrix.shardIndex }} ${{ matrix.shardTotal }}
     strategy:
@@ -223,6 +227,7 @@ jobs:
 
 
   electron:
+    if: ${{ env.CUT_RELEASE_PR == 'false' }}
     name: playwright:electron:${{matrix.os}}
     strategy:
       fail-fast: false
