--- a/src/wasm-lib/kcl/Cargo.toml
+++ b/src/wasm-lib/kcl/Cargo.toml
@@ -77,15 +77,7 @@ engine = []
 pyo3 = ["dep:pyo3"]
 # Helper functions also used in benchmarks.
 lsp-test-util = []
-
 tabled = ["dep:tabled"]
-
-[profile.release]
-panic = "abort"
-debug = true
-
-[profile.bench]
-debug = true # Flamegraphs of benchmarks require accurate debug symbols
 
 [dev-dependencies]
 base64 = "0.22.1"
@@ -94,7 +86,7 @@ expectorate = "1.1.0"
 handlebars = "6.2.0"
 iai = "0.1"
 image = { version = "0.25.3", default-features = false, features = ["png"] }
-insta = { version = "1.40.0", features = ["json"] }
+insta = { version = "1.41.0", features = ["json", "filters"] }
 itertools = "0.13.0"
 pretty_assertions = "1.4.1"
 tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
