--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "test-setup": "yarn install && yarn build:wasm",
     "test": "vitest --mode development",
     "test:unit": "vitest run --mode development",
+    "test:unit:kcl-samples":"yarn test:unit -- ./src/lang/kclSamples.test.ts",
     "test:playwright:browser:chrome": "playwright test --project='Google Chrome' --config=playwright.ci.config.ts --grep-invert='@snapshot|@electron'",
     "test:playwright:browser:chrome:windows": "playwright test --project=\"Google Chrome\" --config=playwright.ci.config.ts --grep-invert=\"@snapshot|@electron|@skipWin\"",
     "test:playwright:browser:chrome:ubuntu": "playwright test --project='Google Chrome' --config=playwright.ci.config.ts --grep-invert='@snapshot|@electron|@skipLinux'",
@@ -117,7 +118,8 @@
     "test:playwright:electron:windows:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipWin",
     "test:playwright:electron:macos:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipMacos",
     "test:playwright:electron:ubuntu:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipLinux",
-    "test:unit:local": "yarn simpleserver:bg && yarn test:unit; kill-port 3000"
+    "test:unit:local": "yarn simpleserver:bg && yarn test:unit; kill-port 3000",
+    "test:unit:local:kcl-samples": "yarn simpleserver:bg && yarn test:unit -- ./src/lang/kclSamples.test.ts; kill-port 3000"
   },
   "prettier": {
     "trailingComma": "es5",
