--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "test:playwright:electron:macos:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipMacos",
     "test:playwright:electron:ubuntu:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipLinux",
     "test:unit:local": "yarn simpleserver:bg && yarn test:unit; kill-port 3000",
-    "test:unit:local:kcl-samples": "yarn simpleserver:bg && yarn test:unit -- ./src/lang/kclSamples.test.ts; kill-port 3000"
+    "test:unit:kcl-samples:local": "yarn simpleserver:bg && yarn test:unit -- ./src/lang/kclSamples.test.ts; kill-port 3000"
   },
   "prettier": {
     "trailingComma": "es5",
