--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "tronb:package": "electron-builder --config electron-builder.yml",
     "test-setup": "yarn install && yarn build:wasm",
     "test": "vitest --mode development",
-    "test:unit": "vitest run --mode development",
+    "test:unit": "vitest run --mode development --exclude **/kclSamples.test.ts",
+    "test:unit:kcl-samples": "vitest run --mode development ./src/lang/kclSamples.test.ts",
     "test:playwright:browser:chrome": "playwright test --project='Google Chrome' --config=playwright.ci.config.ts --grep-invert='@snapshot|@electron'",
     "test:playwright:browser:chrome:windows": "playwright test --project=\"Google Chrome\" --config=playwright.ci.config.ts --grep-invert=\"@snapshot|@electron|@skipWin\"",
     "test:playwright:browser:chrome:ubuntu": "playwright test --project='Google Chrome' --config=playwright.ci.config.ts --grep-invert='@snapshot|@electron|@skipLinux'",
@@ -117,7 +118,8 @@
     "test:playwright:electron:windows:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipWin",
     "test:playwright:electron:macos:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipMacos",
     "test:playwright:electron:ubuntu:local": "yarn tron:package && NODE_ENV=development playwright test --config=playwright.electron.config.ts --grep=@electron --grep-invert=@skipLinux",
-    "test:unit:local": "yarn simpleserver:bg && yarn test:unit; kill-port 3000"
+    "test:unit:local": "yarn simpleserver:bg && yarn test:unit; kill-port 3000",
+    "test:unit:kcl-samples:local": "yarn simpleserver:bg && yarn test:unit:kcl-samples; kill-port 3000"
   },
   "prettier": {
     "trailingComma": "es5",
