Change Dependabot PR frequency to weekly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,21 +8,21 @@ updates:
     - package-ecosystem: 'npm' # See documentation for possible values
       directory: '/' # Location of package manifests
       schedule:
-          interval: 'daily'
+          interval: 'weekly'
       reviewers:
           - franknoirot
           - irev-dev
     - package-ecosystem: 'github-actions' # See documentation for possible values
       directory: '/' # Location of package manifests
       schedule:
-          interval: 'daily'
+          interval: 'weekly'
       reviewers:
           - adamchalmers
           - jessfraz
     - package-ecosystem: 'cargo' # See documentation for possible values
       directory: '/src/wasm-lib/' # Location of package manifests
       schedule:
-          interval: 'daily'
+          interval: 'weekly'
       reviewers:
           - adamchalmers
           - jessfraz
