Migrate to electron-updater channels for nightly builds Fixes #4192

--- a/.github/workflows/build-test-publish-apps.yml
+++ b/.github/workflows/build-test-publish-apps.yml
@@ -50,9 +50,7 @@ jobs:
       - name: Set nightly version
         if: github.event_name == 'schedule'
         run: |
-          VERSION=$(date +'%-y.%-m.%-d') yarn bump-jsons
-
-      # TODO: see if we need to inject updater nightly URL here https://dl.zoo.dev/releases/modeling-app/nightly/last_update.json
+          VERSION=$(date +'%-y.%-m.%-d')-alpha yarn bump-jsons
 
       - name: Generate release notes
         run: |
@@ -69,18 +67,6 @@ jobs:
 
       - id: export_version
         run: echo "version=`cat package.json | jq -r '.version'`" >> "$GITHUB_OUTPUT"
-
-      - name: Prepare electron-builder.yml file for nightly
-        if: ${{ github.event_name == 'schedule' }}
-        run: |
-          yq -i '.publish[0].url = "https://dl.zoo.dev/releases/modeling-app/nightly"' electron-builder.yml
-
-      - uses: actions/upload-artifact@v3
-        if: ${{ github.event_name == 'schedule' }}
-        with:
-          name: prepared-files-nightly
-          path: |
-            electron-builder.yml
 
       - name: Prepare electron-builder.yml file for updater test
         if: ${{ env.CUT_RELEASE_PR == 'true' }}
@@ -125,16 +111,6 @@ jobs:
           mkdir src/wasm-lib/pkg
           cp prepared-files/src/wasm-lib/pkg/wasm_lib* src/wasm-lib/pkg
           cp prepared-files/release-notes.md release-notes.md
-
-      - uses: actions/download-artifact@v3
-        if: ${{ github.event_name == 'schedule' }}
-        name: prepared-files-nightly
-
-      - name: Copy updated electron-builder.yml file for nightly build
-        if: ${{ github.event_name == 'schedule' }}
-        run: |
-          ls -R prepared-files-nightly
-          cp prepared-files-nightly/electron-builder.yml electron-builder.yml
 
       - name: Sync node version and setup cache
         uses: actions/setup-node@v4
@@ -276,9 +252,9 @@ jobs:
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
       VERSION: ${{ github.event_name == 'schedule' && needs.prepare-files.outputs.version || format('v{0}', needs.prepare-files.outputs.version) }}
       PUB_DATE: ${{ github.event_name == 'release' && github.event.release.created_at || github.event.repository.updated_at }}
-      BUCKET_DIR: ${{ github.event_name == 'schedule' && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
-      WEBSITE_DIR: ${{ github.event_name == 'schedule' && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
-      URL_CODED_NAME: ${{ github.event_name == 'schedule' && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
+      BUCKET_DIR: 'dl.kittycad.io/releases/modeling-app'
+      WEBSITE_DIR: 'dl.zoo.dev/releases/modeling-app'
+      URL_CODED_NAME: 'Zoo%20Modeling%20App'
     steps:
       - uses: actions/checkout@v4
 
