Test publish to test-nightly-electron-channel

--- a/.github/workflows/build-test-publish-apps.yml
+++ b/.github/workflows/build-test-publish-apps.yml
@@ -245,14 +245,14 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: write
-    if: ${{ github.event_name == 'release' || github.event_name == 'schedule' }}
+    # if: ${{ github.event_name == 'release' || github.event_name == 'schedule' }}
     needs: [prepare-files, build-apps]
     env:
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
       VERSION: ${{ format('v{0}', needs.prepare-files.outputs.version) }}
       PUB_DATE: ${{ github.event_name == 'release' && github.event.release.created_at || github.event.repository.updated_at }}
-      BUCKET_DIR: 'dl.kittycad.io/releases/modeling-app'
-      WEBSITE_DIR: 'dl.zoo.dev/releases/modeling-app'
+      BUCKET_DIR: 'dl.kittycad.io/releases/modeling-app/test-nightly-electron-channel'
+      WEBSITE_DIR: 'dl.zoo.dev/releases/modeling-app/test-nightly-electron-channel'
       URL_CODED_NAME: 'Zoo%20Modeling%20App'
     steps:
       - uses: actions/checkout@v4
