--- a/package.json
+++ b/package.json
@@ -92,9 +92,8 @@
     "wasm-prep": "rimraf src/wasm-lib/pkg && mkdirp src/wasm-lib/pkg && rimraf src/wasm-lib/kcl/bindings",
     "lint-fix": "eslint --fix src e2e packages/codemirror-lsp-client",
     "lint": "eslint --max-warnings 0 src e2e packages/codemirror-lsp-client",
-    "json:set-version": "echo \"$(jq --arg v \"$VERSION\" '.version=$v' package.json --indent 2)\" > package.json",
-    "json:set-nightly-name": "echo \"$(jq --arg name 'Zoo Modeling App (Nightly)' '.productName=$name' package.json --indent 2)\" > package.json",
-    "assets:set-nightly-icons": "cp assets/icon-nightly.png assets/icon.png && cp assets/icon-nightly.ico assets/icon.ico",
+    "files:set-version": "echo \"$(jq --arg v \"$VERSION\" '.version=$v' package.json --indent 2)\" > package.json",
+    "files:set-to-nightly": "./scripts/set-files-to-nightly.sh",
     "postinstall": "yarn fetch:samples && yarn xstate:typegen && ./node_modules/.bin/electron-rebuild",
     "xstate:typegen": "yarn xstate typegen \"src/**/*.ts?(x)\"",
     "make:dev": "make dev",
