--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -1,22 +1,18 @@
-name: build-publish-apps
+name: build-apps
 
 on:
-  pull_request:
   push:
     branches:
-      - main
-  release:
-    types: [published]
-  schedule:
-    - cron: '0 4 * * *'
-  # Daily at 04:00 AM UTC
-  # Will checkout the last commit from the default branch (main as of 2023-10-04)
+      - pierremtb/issue4522-Make-the-release-process-non-blocking
+    tags:
+      - 'v*-nightly'
+      - 'v*-test'
 
 env:
-  CUT_RELEASE_PR: ${{ github.event_name == 'pull_request' && (contains(github.event.pull_request.title, 'Cut release v')) }}
-  NIGHTLY: ${{ github.event_name == 'schedule' }}
-  BUILD_RELEASE: ${{ github.event_name == 'release' || github.event_name == 'schedule' || github.event_name == 'pull_request' && (contains(github.event.pull_request.title, 'Cut release v')) }}
-  NOTES: ${{ github.event_name == 'release' && github.event.release.body || format('Non-release build, commit {0}', github.sha) }}
+  BUILD_RELEASE: ${{ github.ref_type == 'tag' }}
+  NIGHTLY: ${{ endsWith(github.ref_name, '-nightly') }}
+  # TODO: Change this to only real releases
+  BUILD_UPDATER_TEST: ${{ github.ref_type == 'tag' }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -50,12 +46,10 @@ jobs:
 
       - name: Set nightly version, product name, and icons
         if: ${{ env.NIGHTLY == 'true' }}
-        run: yarn files:flip-to-nightly
-
-      - name: Generate release notes
         run: |
-          echo "$NOTES" > release-notes.md
-          cat release-notes.md
+          # TODO: use tag version instead
+          VERSION=$(date +'%-y.%-m.%-d') yarn files:set-version
+          yarn files:flip-to-nightly
 
       - uses: actions/upload-artifact@v3
         with:
@@ -64,7 +58,6 @@ jobs:
             package.json
             electron-builder.yml
             src/wasm-lib/pkg/wasm_lib*
-            release-notes.md
             assets/icon.ico
             assets/icon.png
 
@@ -72,12 +65,12 @@ jobs:
         run: echo "version=`cat package.json | jq -r '.version'`" >> "$GITHUB_OUTPUT"
 
       - name: Prepare electron-builder.yml file for updater test
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         run: |
           yq -i '.publish[0].url = "https://dl.zoo.dev/releases/modeling-app/updater-test"' electron-builder.yml
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         with:
           name: prepared-files-updater-test
           path: |
@@ -205,17 +198,17 @@ jobs:
       # TODO: add the 'Build for Mac TestFlight (nightly)' stage back
 
       - uses: actions/download-artifact@v3
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         name: prepared-files-updater-test
 
       - name: Copy updated electron-builder.yml file for updater test
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         run: |
           ls -R prepared-files-updater-test
           cp prepared-files-updater-test/electron-builder.yml electron-builder.yml
 
       - name: Build the app (updater-test)
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
@@ -229,7 +222,7 @@ jobs:
         run: yarn electron-builder --config --publish always
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         with:
           name: updater-test-arm64-${{ matrix.platform }}
           path: |
@@ -238,7 +231,7 @@ jobs:
             out/*-arm64-linux.AppImage
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.CUT_RELEASE_PR == 'true' }}
+        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
         with:
           name: updater-test-x64-${{ matrix.platform }}
           path: |
@@ -247,22 +240,21 @@ jobs:
             out/*-x86_64-linux.AppImage
 
 
-  publish-apps-release:
-    runs-on: ubuntu-22.04
+  create-draft-release:
+    runs-on: ubuntu-latest
     permissions:
       contents: write
-    if: ${{ github.event_name == 'release' || github.event_name == 'schedule' }}
+      pull-requests: read
+    if: ${{ startsWith(github.ref_name, 'v') && !(endsWith(github.ref_name, '-nightly') || endsWith(github.ref_name, '-test')) }}
     needs: [prepare-files, build-apps]
     env:
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
       VERSION: ${{ format('v{0}', needs.prepare-files.outputs.version) }}
-      PUB_DATE: ${{ github.event_name == 'release' && github.event.release.created_at || github.event.repository.updated_at }}
-      BUCKET_DIR: ${{ github.event_name == 'schedule' && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
-      WEBSITE_DIR: ${{ github.event_name == 'schedule' && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
-      URL_CODED_NAME: ${{ github.event_name == 'schedule' && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
+      PUB_DATE: ${{ github.event.repository.updated_at }}
+      BUCKET_DIR: ${{ endsWith(github.ref_name, '-nightly') && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
+      WEBSITE_DIR: ${{ endsWith(github.ref_name, '-nightly') && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
+      URL_CODED_NAME: ${{ endsWith(github.ref_name, '-nightly') && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
     steps:
-      - uses: actions/checkout@v4
-
       - uses: actions/download-artifact@v3
         with:
           name: out-arm64-win
@@ -335,78 +327,16 @@ jobs:
                   "url": $linux_x64_url
                 }
               }
-            }' > last_download.json
-            cat last_download.json
+            }' > out/last_download.json
+            cat out/last_download.json
 
       - name: List artifacts
         run: "ls -R out"
 
-      - name: Authenticate to Google Cloud
-        uses: 'google-github-actions/auth@v2.1.7'
-        with:
-          credentials_json: '${{ secrets.GOOGLE_CLOUD_DL_SA }}'
-
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2.1.2
-        with:
-          project_id: ${{ env.GOOGLE_CLOUD_PROJECT_ID }}
-
-      - name: Upload release files to public bucket
-        uses: google-github-actions/upload-cloud-storage@v2.2.1
-        with:
-          path: out
-          glob: 'Zoo*'
-          parent: false
-          destination: ${{ env.BUCKET_DIR }}
-
-      - name: Upload update endpoint to public bucket
-        uses: google-github-actions/upload-cloud-storage@v2.2.1
-        with:
-          path: out
-          glob: 'latest*'
-          parent: false
-          destination: ${{ env.BUCKET_DIR }}
-
-      - name: Upload download endpoint to public bucket
-        uses: google-github-actions/upload-cloud-storage@v2.2.1
-        with:
-          path: last_download.json
-          destination: ${{ env.BUCKET_DIR }}
-
-      - name: Upload release files to Github
-        if: ${{ github.event_name == 'release' }}
+      - name: Create draft release
         uses: softprops/action-gh-release@v2
         with:
-          files: 'out/Zoo*'
-
-      - name: Invalidate bucket cache on latest*.yml and last_download.json files
-        run: |
-          gcloud compute url-maps invalidate-cdn-cache dl-url-map --path="/releases/modeling-app/last_download.json" --async
-          gcloud compute url-maps invalidate-cdn-cache dl-url-map --path="/releases/modeling-app/latest-linux-arm64.yml" --async
-          gcloud compute url-maps invalidate-cdn-cache dl-url-map --path="/releases/modeling-app/latest-mac.yml" --async
-          gcloud compute url-maps invalidate-cdn-cache dl-url-map --path="/releases/modeling-app/latest.yml" --async
-
-  announce_release:
-    needs: [publish-apps-release]
-    runs-on: ubuntu-22.04
-    if: github.event_name == 'release'
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-
-      - name: Announce Release
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          RELEASE_VERSION: ${{ github.event.release.tag_name }}
-          RELEASE_BODY: ${{ github.event.release.body}}
-        run: python public/announce_release.py
+          # TODO: add body placeholder
+          body: ''
+          draft: true
+          files: 'out/*'
