--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -6,27 +6,24 @@ on:
     branches:
       - main
     tags:
-      - 'v*-nightly'
-      - 'v*-test'
+      - 'v*'
+  schedule:
+    - cron: '0 4 * * *'
+  # Daily at 04:00 AM UTC
+  # Will checkout the last commit from the default branch (main as of 2023-10-04)
 
-env:
-  # BUILD_RELEASE: ${{ github.ref_type == 'tag' }}
-  BUILD_RELEASE: true
-  # NIGHTLY: ${{ endsWith(github.ref_name, '-nightly') }}
-  NIGHTLY: true
-  # TODO: Change this to only real releases
-  # BUILD_UPDATER_TEST: ${{ github.ref_type == 'tag' }}
-  BUILD_UPDATER_TEST: false
-
-# concurrency:
-#   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-#   cancel-in-progress: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
 jobs:
   prepare-files:
     runs-on: ubuntu-22.04  # seperate job on Ubuntu for easy string manipulations (compared to Windows)
     outputs:
       version: ${{ steps.export_version.outputs.version }}
+    env:
+      IS_RELEASE: ${{ github.ref_type == 'tag' }}
+      IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
     steps:
       - uses: actions/checkout@v4
 
@@ -49,11 +46,15 @@ jobs:
         run: "yarn build:wasm"
 
       - name: Set nightly version, product name, and icons
-        if: ${{ env.NIGHTLY == 'true' }}
+        if: ${{ env.IS_NIGHTLY == 'true' }}
+        run: yarn files:flip-to-nightly
+
+      - name: Generate release notes
+        env:
+          NOTES: ${{ format('Development build, commit {0}', github.sha) }}
         run: |
-          # TODO: use tag version instead
-          VERSION=$(date +'%-y.%-m.%-d') yarn files:set-version
-          yarn files:flip-to-nightly
+          echo "$NOTES" > release-notes.md
+          cat release-notes.md
 
       - uses: actions/upload-artifact@v3
         with:
@@ -62,6 +63,7 @@ jobs:
             package.json
             electron-builder.yml
             src/wasm-lib/pkg/wasm_lib*
+            release-notes.md
             assets/icon.ico
             assets/icon.png
 
@@ -69,12 +71,12 @@ jobs:
         run: echo "version=`cat package.json | jq -r '.version'`" >> "$GITHUB_OUTPUT"
 
       - name: Prepare electron-builder.yml file for updater test
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_RELEASE == 'true' }}
         run: |
           yq -i '.publish[0].url = "https://dl.zoo.dev/releases/modeling-app/updater-test"' electron-builder.yml
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_RELEASE == 'true' }}
         with:
           name: prepared-files-updater-test
           path: |
@@ -96,6 +98,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
+      IS_RELEASE: ${{ github.ref_type == 'tag' }}
+      IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
+      IS_MAIN: ${{ github.ref_type == 'branch' && github.head_ref == 'main' }}
     steps:
       - uses: actions/checkout@v4
 
@@ -110,6 +115,7 @@ jobs:
           cp prepared-files/src/wasm-lib/pkg/wasm_lib_bg.wasm public
           mkdir src/wasm-lib/pkg
           cp prepared-files/src/wasm-lib/pkg/wasm_lib* src/wasm-lib/pkg
+          cp prepared-files/release-notes.md release-notes.md
           cp prepared-files/assets/icon.ico assets/icon.ico
           cp prepared-files/assets/icon.png assets/icon.png
 
@@ -124,7 +130,7 @@ jobs:
       - run: yarn tronb:vite
 
       - name: Prepare certificate and variables (Windows only)
-        if: ${{ env.BUILD_RELEASE == 'true' && matrix.os == 'windows-2022' }}
+        if: ${{ (env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true') && matrix.os == 'windows-2022' }}
         run: |
           echo "${{secrets.SM_CLIENT_CERT_FILE_B64 }}" | base64 --decode > /d/Certificate_pkcs12.p12
           cat /d/Certificate_pkcs12.p12
@@ -139,7 +145,7 @@ jobs:
         shell: bash
 
       - name: Setup certicate with SSM KSP (Windows only)
-        if: ${{ env.BUILD_RELEASE == 'true' && matrix.os == 'windows-2022' }}
+        if: ${{ (env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true') && matrix.os == 'windows-2022' }}
         run: |
           curl -X GET  https://one.digicert.com/signingmanager/api-ui/v1/releases/smtools-windows-x64.msi/download -H "x-api-key:%SM_API_KEY%" -o smtools-windows-x64.msi
           msiexec /i smtools-windows-x64.msi /quiet /qn
@@ -150,13 +156,13 @@ jobs:
         shell: cmd
 
       - name: Build the app (debug)
-        if: ${{ env.BUILD_RELEASE == 'false' }}
+        if: ${{ env.IS_MAIN == 'true' }}
         # electron-builder doesn't have a concept of release vs debug,
         # this is just not doing any codesign or release yml generation
         run: yarn electron-builder --config
 
       - name: Build the app (release)
-        if: ${{ env.BUILD_RELEASE == 'true' }}
+        if: ${{ env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true' }}
         env:
           PUBLISH_FOR_PULL_REQUEST: true
           APPLE_ID: ${{ secrets.APPLE_ID }}
@@ -192,7 +198,7 @@ jobs:
             out/*-x86_64-linux.*
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.BUILD_RELEASE == 'true' }}
+        if: ${{ env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true' }}
         with:
           name: out-yml
           path: |
@@ -201,17 +207,17 @@ jobs:
       # TODO: add the 'Build for Mac TestFlight (nightly)' stage back
 
       - uses: actions/download-artifact@v3
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_MAIN == 'true' }}
         name: prepared-files-updater-test
 
       - name: Copy updated electron-builder.yml file for updater test
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_MAIN == 'true' }}
         run: |
           ls -R prepared-files-updater-test
           cp prepared-files-updater-test/electron-builder.yml electron-builder.yml
 
       - name: Build the app (updater-test)
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_MAIN == 'true' }}
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
@@ -225,7 +231,7 @@ jobs:
         run: yarn electron-builder --config --publish always
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_MAIN == 'true' }}
         with:
           name: updater-test-arm64-${{ matrix.platform }}
           path: |
@@ -234,7 +240,7 @@ jobs:
             out/*-arm64-linux.AppImage
 
       - uses: actions/upload-artifact@v3
-        if: ${{ env.BUILD_UPDATER_TEST == 'true' }}
+        if: ${{ env.IS_MAIN == 'true' }}
         with:
           name: updater-test-x64-${{ matrix.platform }}
           path: |
@@ -243,21 +249,25 @@ jobs:
             out/*-x86_64-linux.AppImage
 
 
-  create-draft-release:
-    runs-on: ubuntu-latest
+  upload-apps-release:
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
       pull-requests: read
-    if: ${{ startsWith(github.ref_name, 'v') && !(endsWith(github.ref_name, '-nightly') || endsWith(github.ref_name, '-test')) }}
+    if: ${{ github.ref_type == 'tag' || github.event_name == 'schedule' }}
     needs: [prepare-files, build-apps]
     env:
       VERSION_NO_V: ${{ needs.prepare-files.outputs.version }}
       VERSION: ${{ format('v{0}', needs.prepare-files.outputs.version) }}
+      IS_RELEASE: ${{ github.ref_type == 'tag' }}
+      IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
       PUB_DATE: ${{ github.event.repository.updated_at }}
-      BUCKET_DIR: ${{ endsWith(github.ref_name, '-nightly') && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
-      WEBSITE_DIR: ${{ endsWith(github.ref_name, '-nightly') && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
-      URL_CODED_NAME: ${{ endsWith(github.ref_name, '-nightly') && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
+      BUCKET_DIR: ${{ github.event_name == 'schedule' && 'dl.kittycad.io/releases/modeling-app/nightly' || 'dl.kittycad.io/releases/modeling-app' }}
+      WEBSITE_DIR: ${{ github.event_name == 'schedule' && 'dl.zoo.dev/releases/modeling-app/nightly' || 'dl.zoo.dev/releases/modeling-app' }}
+      URL_CODED_NAME: ${{ github.event_name == 'schedule' && 'Zoo%20Modeling%20App%20%28Nightly%29' || 'Zoo%20Modeling%20App' }}
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v3
         with:
           name: out-arm64-win
@@ -336,10 +346,42 @@ jobs:
       - name: List artifacts
         run: "ls -R out"
 
+      - name: Authenticate to Google Cloud
+        if: ${{ env.IS_NIGHTLY == 'true' }}
+        uses: 'google-github-actions/auth@v2.1.7'
+        with:
+          credentials_json: '${{ secrets.GOOGLE_CLOUD_DL_SA }}'
+
+      - name: Set up Google Cloud SDK
+        if: ${{ env.IS_NIGHTLY == 'true' }}
+        uses: google-github-actions/setup-gcloud@v2.1.2
+        with:
+          project_id: ${{ env.GOOGLE_CLOUD_PROJECT_ID }}
+
+      - name: Upload nightly files to public bucket
+        if: ${{ env.IS_NIGHTLY == 'true' }}
+        uses: google-github-actions/upload-cloud-storage@v2.2.1
+        with:
+          path: out
+          glob: '*'
+          parent: false
+          destination: ${{ env.BUCKET_DIR }}
+
       - name: Create draft release
         uses: softprops/action-gh-release@v2
+        if: ${{ env.IS_RELEASE == 'true' }}
         with:
-          # TODO: add body placeholder
-          body: ''
+          # TODO: fetch previous tag
+          body: |
+            ## Changed
+            * ...
+
+            ## Added
+            * ...
+
+            ## Fixed
+            * ...
+
+            **Full Changelog**: https://github.com/KittyCAD/modeling-app/compare/{BEFORE}...${{ github.ref_name }}
           draft: true
           files: 'out/*'
